--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="scripts\" />
     <Folder Include="typings\" />
   </ItemGroup>
   <ItemGroup>
